Add userauth submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "datastorage"]
 	path = datastorage
 	url = https://github.com/juiceme/datastorage.git
+[submodule "userauth"]
+	path = userauth
+	url = https://github.com/juiceme/userauth.git
